fix header on mobile devices, fix dearch bar width on mobile devices, add jquery

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -74,29 +74,20 @@ header {
     align-items: center;
 }
 
-@media only screen and (max-width: 640px) {
-    header h1 {
-        font-size: 40px;
-    }
-
-    header {
-        padding: 20px 30px;
-    }
-}
 
 .header__perfil {
     background-color: rgb(85, 174, 190);
     height: 100%;
     width: fit-content;
-    padding: 0 20px 0 22px;
+    padding: 0 15px;
     color: white;
     border-radius: 20px;
     overflow-y: hidden;
+    transition: height 0.3s ease-in-out;
 }
 
 .header__perfil:hover {
     height: 180%;
-    transition: height 0.3s ease-in-out;
 }
 
 .header__perfil--contenedor {
@@ -144,6 +135,26 @@ h1 {
     font-weight: lighter;
 }
 
+@media only screen and (max-width: 640px) {
+    header h1 {
+        font-size: 40px;
+    }
+
+    header {
+        padding: 20px 30px;
+    }
+}
+
+@media only screen and (max-width: 440px) {
+    header h1 {
+        font-size: 30px;
+    }
+
+    header {
+        padding: 20px 10px;
+    }
+}
+
 /* --------------buscador-------------------------- */
 
 .buscador {
@@ -165,10 +176,16 @@ h1 {
     border: 2px solid white;
     border-radius: 25px;
     height: 50px;
-    width: 32%;
+    width: 600px;
     text-align: center;
     color: white;
     font-size: 25px;
+}
+
+@media only screen and (max-width: 640px) {
+    .buscador input {
+        width: 90%;
+    }
 }
 
 /* --------------carrusel-------------------------- */
